--- a/index2.html
+++ b/index2.html
@@ -4,14 +4,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width-device-width, initial-scale=1.0" />
 	<!---  Favicon  --->
-	<link rel="shortcut icon" href="/Users/eminebalpetek/Desktop/images/logo.png" type="image/x-icon">
+	<link rel="shortcut icon" href="/images/logo.png" type="image/x-icon">
   
 	<!---  Box icons  --->	
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css" />	
 	<!----  Google Fonts ----->
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;600;700&display=swap" rel="stylesheet">
 	<!---  Custom Stylesheet  --->
-	<link rel="stylesheet" href="/Users/eminebalpetek/Desktop/style2.css">
+	<link rel="stylesheet" href="/style2.css">
 	<title>TechStore | Be A Tech Pro</title>
 
  </head>
@@ -24,7 +24,7 @@
 		<nav class="nav">
 	  		<div class="navigation container">
 				<div class="logo">
-				 	<img src="/Users/eminebalpetek/Desktop/images/logo.png" width="125px">
+				 	<img src="/images/logo.png" width="125px">
 				</div>
 				<div class="menu">
 				<div class="top-nav">
@@ -65,7 +65,7 @@
 	</div>	
 	</nav>
 		<!---  Hero  --->
-	<img src="/Users/eminebalpetek/Desktop/images/images2.jpeg"  class="hero-img" alt="" />
+	<img src="/images/images2.jpeg"  class="hero-img" alt="" />
 
 	<div class="hero-content">
 	<h2><span class="discount">No Matter How Much Experience You Have </span> </h2>
@@ -86,13 +86,13 @@
  	<div class="small-container">
  		<div class="row">
  		<div class="col-3">
- 			<img src="/Users/eminebalpetek/Desktop/images/ISTQB_Logo.jpg">
+ 			<img src="/images/ISTQB_Logo.jpg">
  		</div>
  		<div class="col-3">
- 			<img src="/Users/eminebalpetek/Desktop/images/1280px-Oracle_logo.svg.png">
+ 			<img src="/images/1280px-Oracle_logo.svg.png">
  		</div>
  		<div class="col-3">
- 			<img src="/Users/eminebalpetek/Desktop/images/Java_jdk_logo_web-372x210.jpg">
+ 			<img src="/images/Java_jdk_logo_web-372x210.jpg">
  		</div>
  
 
@@ -103,7 +103,7 @@
     	<h2 class="title">Featured Products</h2>
     	<div class="row">
     		<div class="col-4">
-    			<img src="/Users/eminebalpetek/Desktop/images/javacertifiedprogrammer.jpg">
+    			<img src="/images/javacertifiedprogrammer.jpg">
     			<h4>JDK Certificate</h4>
     			<div class="rating">
     				<i class="fa fa-star"></i>
@@ -115,7 +115,7 @@
     			<p>$250.00</p>
 			</div>
 			<div class="col-4">
-    			<img src="/Users/eminebalpetek/Desktop/images/comptia.png">
+    			<img src="/images/comptia.png">
     			<h4>CompTIA Security+</h4>
     			<div class="rating">
     				<i class="fa fa-star"></i>
@@ -127,7 +127,7 @@
     			<p>$375.00</p>
 			</div>
 			<div class="col-4">
-    			<img src="/Users/eminebalpetek/Desktop/images/ICSI.jpeg">
+    			<img src="/images/ICSI.jpeg">
     			<h4>ICSI Certificate</h4>
     			<div class="rating">
     				<i class="fa fa-star"></i>
@@ -139,7 +139,7 @@
     			<p>275.00</p>
 			</div>
 			<div class="col-4">
-    			<img src="/Users/eminebalpetek/Desktop/images/oraclesql.jpeg">
+    			<img src="/images/oraclesql.jpeg">
     			<h4>SQL Certificate</h4>
     			<div class="rating">
     				<i class="fa fa-star"></i>
@@ -154,7 +154,7 @@
   		<h2 class="title">Latest Products</h2>
   		<div class="row">
     		<div class="col-4">
-    			<img src="/Users/eminebalpetek/Desktop/images/bothaws.png">
+    			<img src="/images/bothaws.png">
     			<h4>AWS Certificate</h4>
     			<div class="rating">
     				<i class="fa fa-star"></i>
@@ -166,7 +166,7 @@
     			<p>$295.00</p>
 			</div>
 			<div class="col-4">
-    			<img src="/Users/eminebalpetek/Desktop/images/scrum.jpeg">
+    			<img src="/images/scrum.jpeg">
     			<h4>ISTQB Certificate</h4>
     			<div class="rating">
     				<i class="fa fa-star"></i>
@@ -178,7 +178,7 @@
     			<p>$125.00</p>
 			</div>
 			<div class="col-4">
-    			<img src="/Users/eminebalpetek/Desktop/images/agile-70194441-300x218.jpg">
+    			<img src="/images/agile-70194441-300x218.jpg">
     			<h4>ICSI Certificate</h4>
     			<div class="rating">
     				<i class="fa fa-star"></i>
@@ -190,7 +190,7 @@
     			<p>155.00</p>
 			</div>
 			<div class="col-4">
-    			<img src="/Users/eminebalpetek/Desktop/images/plsql.jpeg">
+    			<img src="/images/plsql.jpeg">
     			<h4>SQL Certificate</h4>
     			<div class="rating">
     				<i class="fa fa-star"></i>
@@ -211,7 +211,7 @@
   	<div class="small-container">
   		<div class="row">
   		<div class="col-2">
-  			<img src="/Users/eminebalpetek/Desktop/images/bothaws.png">
+  			<img src="/images/bothaws.png">
   		</div>	
   		<div class="col-2">
 			<p>Exclusively Available </p>
@@ -236,7 +236,7 @@
     				<i class="fa fa-star"></i>
     				<i class="fa fa-star-o"></i>
     			</div>
-    			<img src="/Users/eminebalpetek/Desktop/images/business-woman.png">
+    			<img src="/images/business-woman.png">
     			<h3>Sean Parker</h3>
 			</div>
 			<div class="col-3">
@@ -249,7 +249,7 @@
     				<i class="fa fa-star"></i>
     				<i class="fa fa-star-o"></i>
     			</div>
-    			<img src="/Users/eminebalpetek/Desktop/images/Charming-Short-Bob-Grey-Hairstyles-for-Older-Women-Over-60.jpg">
+    			<img src="/images/Charming-Short-Bob-Grey-Hairstyles-for-Older-Women-Over-60.jpg">
     			<h3>Karen Willow</h3>
 			</div>
 			<div class="col-3">
@@ -262,7 +262,7 @@
     				<i class="fa fa-star"></i>
     				<i class="fa fa-star-o"></i>
     			</div>
-    			<img src="/Users/eminebalpetek/Desktop/images/john.jpg">
+    			<img src="/images/john.jpg">
     			<h3>John Adams</h3>
 			</div>
 		</div>
@@ -274,16 +274,16 @@
 		<div class="small-container">
 			<div class="row">
 				<div class="col-5">
-					<img src="/Users/eminebalpetek/Desktop/images/PayPal-Long-Logo-624x117.jpg">
+					<img src="/images/PayPal-Long-Logo-624x117.jpg">
 				</div>
 					<div class="col-5">
-					<img src="/Users/eminebalpetek/Desktop/images/apple-pay-logo.png">
+					<img src="/images/apple-pay-logo.png">
 				</div>
 					<div class="col-5">
-					<img src="/Users/eminebalpetek/Desktop/images/logo_amazonpay-primary-fullcolor-positive.png">
+					<img src="/images/logo_amazonpay-primary-fullcolor-positive.png">
 				</div>
 					<div class="col-5">
-					<img src="/Users/eminebalpetek/Desktop/images/oppo.gif">
+					<img src="/images/oppo.gif">
 				</div>
 			</div>
 		</div>
@@ -297,12 +297,12 @@
  						<h3>Download Our App </h3> 
  						<p>Download App for Android and IOS mobile phone.</p>	
  						<div class="app-logo">
- 							<img src="/Users/eminebalpetek/Desktop/images/Google-Play-Store-Logo.png">
- 							<img src="/Users/eminebalpetek/Desktop/images/app-store-logo.png">
+ 							<img src="/images/Google-Play-Store-Logo.png">
+ 							<img src="/images/app-store-logo.png">
  					</div>
  				</div>
  					<div class="footer-col-2">
- 						<img src="/Users/eminebalpetek/Desktop/images/logo.png">
+ 						<img src="/images/logo.png">
  						<p>Our Purpose Is To Sustainably Make the Pleasure and Benefits of TechTools Certifications to the Many.</p>	
  					</div>
  					<div class="footer-col-3">
@@ -331,7 +331,7 @@
  		</div>
  <p></p>
 
-<img src="/Users/eminebalpetek/Desktop/images/logo.png" width="515" height="356" alt="">
+<img src="/images/logo.png" width="515" height="356" alt="">
 <p>TechStore</p>
 <a href="http://ec2-54-152-254-123.compute-1.amazonaws.com/SamplePage.php" target="_blank">Inventory Query</a>
 <p>eCommerce Website Project</p>
@@ -342,7 +342,7 @@
 
 	<!---  Custom SCRIPT  --->
 
-	<script src="/Users/eminebalpetek/Desktop/index.js"></script>
+	<script src="/index.js"></script>
 
 
 
