--- a/index2.html
+++ b/index2.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 
   <!-- StyleSheet -->
-  <link rel="stylesheet" href="style2.css" />
+  <link rel="stylesheet" href="styles.css" />
   <title>TechStore </title>
 </head>
 
@@ -61,23 +61,23 @@
 
           <ul class="nav-list">
             <li class="nav-item">
-              <a href="#home" class="nav-link scroll-link">Home</a>
+              <a href="#home" class="nav-link scroll-link">Free Courses</a>
             </li>
 
             <li class="nav-item">
-              <a href="#shop" class="nav-link scroll-link">Products</a>
+              <a href="#shop" class="nav-link scroll-link">Resources</a>
             </li>
 
             <li class="nav-item">
-              <a href="#new" class="nav-link scroll-link">New</a>
+              <a href="#new" class="nav-link scroll-link">Corporate Training</a>
             </li>
 
             <li class="nav-item">
-              <a href="#recent" class="nav-link scroll-link">Recent</a>
+              <a href="#recent" class="nav-link scroll-link">Become an Instructor</a>
             </li>
 
             <li class="nav-item">
-              <a href="#blog" class="nav-link scroll-link">Blog</a>
+              <a href="#blog" class="nav-link scroll-link">Higher Education</a>
             </li>
           </ul>
         </div>
@@ -132,7 +132,7 @@
  -->
                   </div>
                 </div>
-                <img src="./images/banner_2.png" class="special_02" alt="">
+                <img src="./images/hero.png" class="special_02" alt="">
               </div>
             </li>
 
@@ -259,7 +259,7 @@
               <i class="far fa-star"></i>
             </div>
             <div class="product-price">
-              <h4>$2500.99</h4>
+              <h4>$250.99</h4>
             </div>
           </div>
           <ul>
@@ -294,7 +294,7 @@
               <i class="far fa-star"></i>
             </div>
             <div class="product-price">
-              <h4>$3000.99</h4>
+              <h4>$300.99</h4>
             </div>
           </div>
           <ul>
@@ -386,7 +386,8 @@
     </section>
 
     <!-- All Products -->
-    <section class="section" id="shop">
+   <!-- 
+ <section class="section" id="shop">
       <div class="title-container">
         <div class="section-titles">
           <div class="section-title active" data-id="latest">
@@ -395,6 +396,7 @@
           </div>
         </div>
       </div>
+ -->
 
       <div class="shop-center product-center container">
 
@@ -428,7 +430,8 @@
     </div>
 
     <!-- Latest Products -->
-    <section class="section latest-products" id="new">
+   <!-- 
+ <section class="section latest-products" id="new">
       <div class="title-container">
         <div class="section-titles">
           <div class="section-title active" data-id="latest">
@@ -440,6 +443,7 @@
       <div class="latest-center product-center container"></div>
 
     </section>
+ -->
 
     <!-- blog -->
     <section class="section blog" id="blog">
@@ -524,7 +528,8 @@
 
 
     <!-- Recent Products -->
-    <section class="section recent-products" id="recent">
+ <!-- 
+   <section class="section recent-products" id="recent">
       <div class="title-container">
         <div class="section-titles">
           <div class="section-title active" data-id="recent">
@@ -537,6 +542,7 @@
 
       </div>
     </section>
+ -->
 
     <!-- Facility -->
     <section class="facility section" id="facility">
