--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 </head>
 
 <body>
-  <div id="pre-loader">
+<!--   <div id="pre-loader">
     <div class="loader"></div>
-  </div>
+  </div> -->
 
   <div class="adverts">
     <span>30% off your first purchase</span>
