--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
 </head>
 
 <body>
-<!--   <div id="pre-loader">
+ <!-- 
+ <div id="pre-loader">
     <div class="loader"></div>
-  </div> -->
+  </div>
+ -->
 
   <div class="adverts">
     <span>30% off your first purchase</span>
@@ -116,7 +118,7 @@
  -->
                   </div>
                 </div>
-                <img src="./images/Cloud-computing-services-Milwaukee.png" class="special_01" alt="">
+                <img src="./images/hero2.png" class="special_01" alt="">
             </li>
 
             <li class="glide__slide">
