--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon" />
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;900&display=swap" rel="stylesheet" />
@@ -550,9 +550,8 @@
         <div class="facility-contianer container">
           <div class="facility-box">
             <div class="facility-icon">
-<!-- 
-              <i class="fas fa-plane"></i>
- -->
+ 		<i class="fas fa-book-open"></i> 
+
             </div>
             <p>FREE BOOTCAMPS</p>
           </div>
