--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
             <div class="facility-icon">
               <i class="far fa-credit-card"></i>
             </div>
-            <p>MANY PAYMENT GATWAYS</p>
+            <p>MANY PAYMENT GATEWAYS</p>
           </div>
 
           <div class="facility-box">
