--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
 <body>
 
-<!--  <div id="pre-loader">
+ <div id="pre-loader">
     <div class="loader"></div>
-  </div> -->
+  </div> 
 
   <div class="adverts">
     <span>30% off your first purchase</span>
