--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body>
 
-<!--  <div id="pre-loader">
+ <div id="pre-loader">
     <div class="loader"></div>
   </div>  -->
 
@@ -722,7 +722,8 @@
     </div>
    
   </footer>
-  <!-- End Footer -->
+  <!-- End Footer new command -->
+  
 
 
   <!-- Glidejs Script -->
