--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
  
  <div id="pre-loader">
     <div class="loader"></div>
-  </div>  --> -->
+  </div>  
 
   <div class="adverts">
     <span>30% off your first purchase</span>
@@ -483,7 +483,7 @@
               <li class="glide__slide">
                 <div class="blog-card">
                   <div class="card-header">
-                    <img src="./images/python-logo.jpeg" alt="">
+                    <img src="./images/python-logo2.jpeg" alt="">
                   </div>
                   <div class="card-footer">
                     <h3>Python</h3>
