--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
               <li class="glide__slide">
                 <div class="blog-card">
                   <div class="card-header">
-                    <img src="./images/plsql.jpeg" alt="">
+                    <img src="./images/plsql.png" alt="">
                   </div>
                   <div class="card-footer">
                     <h3>Getting RDBMS Certificate</h3>
