plsql logo size adjust

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
       </figure>
 
       <figure class="gallary-item item-3">
-        <img src="./images/plsql.jpeg" alt="" class="gallary-img">
+        <img src="./images/plsql.png" alt="" class="gallary-img">
         <div class="content">
           <a href="#">View more</a>
         </div>
