--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
 <body>
  
- <div id="pre-loader">
+ <!-- <div id="pre-loader">
     <div class="loader"></div>
   </div>  
-
+ -->
   <div class="adverts">
     <span>30% off your first purchase</span>
   </div>
